Fix: long talkgroup description overflowing in landscape

--- a/client/imports/app/radio/radio.component.scss
+++ b/client/imports/app/radio/radio.component.scss
@@ -51,6 +51,7 @@
     .radio-control,
     .radio-display {
         flex: 50%;
+        max-width: 50%;
     }
 
     .radio-led {
